Small fixes.
Explosion scale too big.
Turned off indicators.
W3 validation for paths with spaces.
Moonlanding too big when mobile scale.
Added decade for dots.

--- a/style/tidslinje.scss
+++ b/style/tidslinje.scss
@@ -38,6 +38,14 @@ body {
 		position: absolute;
 		width: 5%;
 		opacity: 0;
+
+		p {
+			position: absolute;
+			top: 47%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			font-weight: bold;
+		}
 	}
 
 	.show {
@@ -107,7 +115,7 @@ body {
 					}
 				}
 				svg#maane-raket {
-					width: 400px;
+					width: 50%;
 
 					g {
 						.st0 {
